--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,9 @@
 <h1><%= @student.to_s %></h1>
+<p>
+<%if @student.active == true%>
+	This student is currently active.
+<%else%>
+	This student is currently inactive.
+<%end%></p>
+
+
